--- a/scss/abstract/_variables.scss
+++ b/scss/abstract/_variables.scss
@@ -1,6 +1,18 @@
 /* Color Scheme */
-$primary: #5918df;
+$primary: #2eff2e;
+$primarylight: #8aff8a;
+$primarydark: #00ca00;
 $grey: #494949;
 $white: #fff;
-$offwhite: rgba(255, 255, 255, 0.5);
+$offwhite: rgba(235, 224, 224, 0.5);
 $offwhite1: rgba(255, 255, 255, 0.75);
+$aboutbg: #14121c;
+$yellow: #eeff31;
+$red: #f00404f1;
+$orange: #e39d24;
+$pink: #ff0081;
+$pinklight: #ff48a5;
+$indigo: #5918df;
+$blue: #0040ff;
+
+$titlecolor: #988e9f;
