--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -3,6 +3,16 @@
   padding: 0px;
   cursor: none !important;
 }
+* {
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+*,
+:after,
+:before {
+  box-sizing: border-box;
+}
+
 body {
   font-family: Roboto Condensed, Lato, Arial, sans-serif !important;
   font-weight: 400;
@@ -10,11 +20,6 @@ body {
   box-sizing: border-box;
   background-color: black;
   color: whitesmoke;
-}
-
-section {
-  margin-top: 50px;
-  padding: 100px 0px;
 }
 
 ul {
@@ -34,8 +39,8 @@ a:link {
 }
 
 ::selection {
-  background-color: $primary;
-  color: white;
+  background-color: $primarylight;
+  color: black;
 }
 
 h1 {
@@ -46,4 +51,101 @@ h1 {
 p {
   font-size: 16px;
   line-height: 2.5;
+}
+
+.start_section {
+  padding-top: 70px;
+  padding-bottom: 70px;
+  margin-top: 25vh;
+}
+
+.bullet {
+  position: absolute;
+  left: -5px;
+  top: 0px;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  border: 2px solid $primary;
+  background-color: #1b191e;
+}
+
+.timeline.alt {
+  top: 0;
+}
+
+.timeline {
+  width: 1px;
+  height: 300%;
+  left: -10px;
+  top: 0px;
+  z-index: 9;
+  position: absolute;
+  background-color: $primary;
+}
+
+.section_item {
+  margin-top: 35px;
+}
+
+.subtitles {
+  font-size: 3rem;
+}
+
+.explore {
+  font-size: 1.5rem;
+  color: $grey;
+  font-weight: 300;
+}
+
+footer {
+  background-color: #0e0d10;
+  box-shadow: 0 0 76px 0 rgba(10, 7, 22, 0);
+  overflow: hidden;
+
+  .small_footer {
+    position: absolute;
+    bottom: 20px;
+    color: #988e9f;
+    font-size: 14px;
+  }
+}
+
+.footer_wrap {
+  margin: 50px 0px 90px;
+  font-family: Roboto Mono, Courier New, Courier, monospace !important;
+  .social_wrap {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 100%;
+
+    &-item {
+      width: 32%;
+      gap: 2%;
+    }
+
+    .social_link {
+      color: $indigo;
+      font-size: 1.1rem;
+    }
+  }
+}
+
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-bottom: 0.5rem;
+  font-weight: 500;
+  line-height: 1.2;
 }
