--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,8 +1,12 @@
+@import 'abstract/animation';
 @import 'abstract/mixins';
 @import 'abstract/variables';
 
 @import 'base/base';
+@import 'base/button';
 @import 'base/cursor';
+
+@import 'pages/about';
 
 @import 'layout/grid';
 @import 'layout/header';
