--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,9 +4,12 @@
 
 @import 'base/base';
 @import 'base/button';
+@import 'base/card';
 @import 'base/cursor';
 
 @import 'pages/about';
+@import 'pages/work';
 
+@import 'layout/footer';
 @import 'layout/grid';
 @import 'layout/header';
