--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -14,11 +14,11 @@
   &--hidden {
     transform: translate3d(0, -4rem, 0);
   }
-}
 
-.header.activated {
-  transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
-  box-shadow: inset 0 35px 13px rgba(14, 12, 22, 0.85);
+  .activated {
+    transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+    box-shadow: inset 0 35px 13px rgba(14, 12, 22, 0.85);
+  }
 }
 
 .main-nav {
@@ -49,5 +49,11 @@
     &:hover {
       color: $offwhite1;
     }
+  }
+}
+
+@include respond('phone') {
+  .menu {
+    display: none;
   }
 }
