--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,13 @@ p {
 .subtitles {
   font-size: 3rem; }
 
+@media only screen and (max-width: 575px) {
+  .start_section {
+    padding-top: 50px;
+    margin-top: 20vh; }
+  .subtitles {
+    font-size: 1.7rem; } }
+
 .explore {
   font-size: 1.5rem;
   color: #494949;
@@ -186,6 +193,18 @@ h6 {
       position: absolute; }
   .project__card:hover {
     box-shadow: 4px 21px 44px -13px rgba(0, 0, 0, 0.75); }
+  @media only screen and (max-width: 575px) {
+    .project__card {
+      width: 90%;
+      height: 220px;
+      margin-left: 40px; }
+      .project__card-text {
+        left: -40px; }
+      .project__card-image {
+        height: 220px; }
+        .project__card-image img {
+          width: 100%;
+          height: 220px; } }
 
 .cursor__inner {
   position: fixed;
@@ -308,6 +327,11 @@ h6 {
   margin: 0px auto;
   padding: 0px 15px; }
 
+@media only screen and (max-width: 575px) {
+  .section_container {
+    width: 85%;
+    padding-right: 0px; } }
+
 .section_content {
   margin-top: 20px;
   padding-bottom: 45px; }
@@ -366,6 +390,15 @@ h6 {
     position: relative; }
   .web .project__2 {
     margin-top: 175px; }
+  @media only screen and (max-width: 575px) {
+    .web .row {
+      flex-direction: column; }
+    .web::before {
+      font-size: 125px;
+      right: 10px;
+      top: -20px; }
+    .web .project__2 {
+      margin-top: 50px; } }
 
 footer {
   background-color: #0e0d10;
@@ -401,6 +434,9 @@ footer {
   padding: 0px 15px; }
   .row .col {
     width: 40%; }
+  @media only screen and (max-width: 480px) {
+    .row .col {
+      width: 100%; } }
 
 .header {
   position: absolute;
@@ -414,10 +450,9 @@ footer {
     position: fixed; }
   .header--hidden {
     transform: translate3d(0, -4rem, 0); }
-
-.header.activated {
-  transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
-  box-shadow: inset 0 35px 13px rgba(14, 12, 22, 0.85); }
+  .header .activated {
+    transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+    box-shadow: inset 0 35px 13px rgba(14, 12, 22, 0.85); }
 
 .main-nav {
   display: flex;
@@ -441,5 +476,9 @@ footer {
       color: #494949; }
     .nav-link:hover {
       color: rgba(255, 255, 255, 0.75); }
+
+@media only screen and (max-width: 575px) {
+  .menu {
+    display: none; } }
 
 /*# sourceMappingURL=main.css.map */
