--- a/scss/abstract/_mixins.scss
+++ b/scss/abstract/_mixins.scss
@@ -9,3 +9,16 @@
   align-items: center;
   justify-content: space-between;
 }
+
+@mixin respond($breakpoint) {
+  @if ($breakpoint== 'sm-phone') {
+    @media only screen and (max-width: 480px) {
+      @content;
+    }
+  }
+  @if ($breakpoint== 'phone') {
+    @media only screen and (max-width: 575px) {
+      @content;
+    }
+  }
+}
