--- a/scss/base/_card.scss
+++ b/scss/base/_card.scss
@@ -71,5 +71,23 @@
       box-shadow: 4px 21px 44px -13px rgba(0, 0, 0, 0.75);
       //box-shadow: 5px 10px red;
     }
+
+    @include respond('phone') {
+      width: 90%;
+      height: 220px;
+      margin-left: 40px;
+
+      &-text {
+        left: -40px;
+      }
+
+      &-image {
+        height: 220px;
+        img {
+          width: 100%;
+          height: 220px;
+        }
+      }
+    }
   }
 }
