--- a/css/main.css
+++ b/css/main.css
@@ -235,22 +235,10 @@ h6 {
     font-family: Roboto Mono, Courier New, Courier, monospace !important;
     font-size: 1rem;
     line-height: 1.6; }
-  #about .code_l {
-    position: relative;
-    z-index: 1; }
-    #about .code_l::after {
-      content: attr(data-line-nr);
-      position: absolute;
-      left: -60px;
-      color: #3b3553;
-      font-family: Roboto Mono, Courier New, Courier, monospace !important;
-      font-size: 16px;
-      line-height: 1.6;
-      z-index: 3;
-      top: 0; }
   #about .code_line {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     position: relative;
     z-index: 1; }
     #about .code_line::after {
@@ -268,13 +256,15 @@ h6 {
     content: '|';
     -webkit-animation: blink 0.8s infinite;
     animation: blink 0.8s infinite; }
+  @media only screen and (max-width: 575px) {
+    #about .code_line::after {
+      left: -53px; } }
 
 .comment {
   color: #78707e;
   display: inline; }
 
 .func {
-  display: inline;
   color: #eeff31; }
 
 .funcname {
@@ -282,15 +272,13 @@ h6 {
   padding: 0px 8px; }
 
 .dot {
-  display: inline;
   color: #3b3553; }
 
 .this {
   color: #f00404f1; }
 
 .prop {
-  color: #0040ff;
-  display: inline; }
+  color: #0040ff; }
 
 .yellow {
   color: #eeff31; }
@@ -422,6 +410,10 @@ footer {
     .footer_wrap .social_wrap-item {
       width: 32%;
       gap: 2%; }
+    @media only screen and (max-width: 575px) {
+      .footer_wrap .social_wrap-item {
+        width: 100%;
+        gap: 0%; } }
     .footer_wrap .social_wrap .social_link {
       color: #5918df;
       font-size: 1.1rem; }
@@ -445,14 +437,15 @@ footer {
   right: 0;
   padding: 1rem 1.5rem;
   height: 4rem;
-  z-index: 1030; }
+  z-index: 103000; }
   .header--fixed {
     position: fixed; }
   .header--hidden {
     transform: translate3d(0, -4rem, 0); }
-  .header .activated {
-    transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
-    box-shadow: inset 0 35px 13px rgba(14, 12, 22, 0.85); }
+
+.header.activated {
+  transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+  box-shadow: inset 15px 45px 35px rgba(14, 12, 22, 0.85); }
 
 .main-nav {
   display: flex;
@@ -477,8 +470,62 @@ footer {
     .nav-link:hover {
       color: rgba(255, 255, 255, 0.75); }
 
+.menu_btn,
+.menu_btn::before,
+.menu_btn::after {
+  display: block;
+  background-color: #494949;
+  position: absolute;
+  height: 2px;
+  width: 32px;
+  transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  border-radius: 1px; }
+
+.menu_btn {
+  top: 18px;
+  left: 5px; }
+
+.menu_btn::before {
+  content: '';
+  margin-top: -8px; }
+
+.menu_btn::after {
+  content: '';
+  margin-top: 8px; }
+
+.menu_btn_container {
+  display: none;
+  width: 45px;
+  height: 40px;
+  cursor: pointer;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 5px 10px;
+  border: 1px solid #5918df;
+  border-radius: 8px;
+  position: relative; }
+
 @media only screen and (max-width: 575px) {
+  .nav {
+    display: none;
+    background-image: linear-gradient(-180deg, #0e0c16, #0e0c16 88%, #0e0c16 99%);
+    width: 100%;
+    text-align: center;
+    padding-bottom: 15px; }
+    .nav-item {
+      padding: 12px 20px; }
+    .nav-link {
+      font-size: 1.4rem; }
+  .nav.showmenu {
+    display: block;
+    width: 100%; }
+  .menu_btn_container {
+    display: block; }
   .menu {
-    display: none; } }
+    position: absolute;
+    top: 4rem;
+    left: 0;
+    width: 100%; } }
 
 /*# sourceMappingURL=main.css.map */
