--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -26,6 +26,13 @@ footer {
       gap: 2%;
     }
 
+    @include respond('phone') {
+      &-item {
+        width: 100%;
+        gap: 0%;
+      }
+    }
+
     .social_link {
       color: $indigo;
       font-size: 1.1rem;
