--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -5,7 +5,7 @@
   right: 0;
   padding: 1rem 1.5rem;
   height: 4rem;
-  z-index: 1030;
+  z-index: 103000;
 
   &--fixed {
     position: fixed;
@@ -14,11 +14,11 @@
   &--hidden {
     transform: translate3d(0, -4rem, 0);
   }
+}
 
-  .activated {
-    transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
-    box-shadow: inset 0 35px 13px rgba(14, 12, 22, 0.85);
-  }
+.header.activated {
+  transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+  box-shadow: inset 15px 45px 35px rgba(14, 12, 22, 0.85);
 }
 
 .main-nav {
@@ -52,8 +52,81 @@
   }
 }
 
-@include respond('phone') {
-  .menu {
+.menu_btn,
+.menu_btn::before,
+.menu_btn::after {
+  display: block;
+  background-color: $grey;
+  position: absolute;
+  height: 2px;
+  width: 32px;
+  transition: transform 400ms cubic-bezier(0.23, 1, 0.32, 1);
+  border-radius: 1px;
+}
+
+.menu_btn {
+  top: 18px;
+  left: 5px;
+}
+
+.menu_btn::before {
+  content: '';
+  margin-top: -8px;
+}
+
+.menu_btn::after {
+  content: '';
+  margin-top: 8px;
+}
+
+.menu_btn {
+  &_container {
     display: none;
+    width: 45px;
+    height: 40px;
+    cursor: pointer;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 5px 10px;
+    border: 1px solid $indigo;
+    border-radius: 8px;
+    position: relative;
+  }
+}
+
+@include respond('phone') {
+  .nav {
+    display: none;
+    background-image: linear-gradient(
+      -180deg,
+      #0e0c16,
+      #0e0c16 88%,
+      #0e0c16 99%
+    );
+    width: 100%;
+    text-align: center;
+    padding-bottom: 15px;
+
+    &-item {
+      padding: 12px 20px;
+    }
+    &-link {
+      font-size: 1.4rem;
+    }
+  }
+  .nav.showmenu {
+    display: block;
+    width: 100%;
+  }
+  .menu_btn_container {
+    display: block;
+  }
+
+  .menu {
+    position: absolute;
+    top: 4rem;
+    left: 0;
+    width: 100%;
   }
 }
