--- a/scss/abstract/_variables.scss
+++ b/scss/abstract/_variables.scss
@@ -8,11 +8,12 @@ $offwhite: rgba(235, 224, 224, 0.5);
 $offwhite1: rgba(255, 255, 255, 0.75);
 $aboutbg: #14121c;
 $yellow: #eeff31;
-$red: #f00404f1;
-$orange: #e39d24;
-$pink: #ff0081;
+$red: #ff1700;
+$orange: #fc5404;
+$pink: #ffc4e1;
 $pinklight: #ff48a5;
 $indigo: #5918df;
-$blue: #0040ff;
+$blue: #88fff7;
+$sky: #11ffee;
 
 $titlecolor: #988e9f;
