--- a/scss/base/_card.scss
+++ b/scss/base/_card.scss
@@ -38,7 +38,7 @@
       }
 
       .online_link {
-        color: $indigo;
+        color: $sky;
         font-size: 0.8rem;
         line-height: 1.5rem;
       }
