--- a/scss/pages/_work.scss
+++ b/scss/pages/_work.scss
@@ -1,6 +1,6 @@
 #work {
-  //background-image: linear-gradient(-180deg, #1a1527, #0e0c16 88%, #0e0c16 99%);
-  background-color: #1a1527;
+  background-image: linear-gradient(-180deg, #1a1527, #0e0c16 88%, #0e0c16 99%);
+  //background-color: #1a1527;
   background-position: top;
   background-repeat: repeat-x;
   position: relative;
