Minify css and improve performance

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,8 +1,10 @@
+@import 'base/font';
 @import 'abstract/animation';
 @import 'abstract/mixins';
 @import 'abstract/variables';
 
 @import 'base/base';
+
 // @import 'base/button';
 // @import 'base/card';
 // @import 'base/cursor';
@@ -14,3 +16,4 @@
 @import 'layout/grid';
 @import 'layout/header';
 @import 'layout/expertise';
+
